File Transfer works perfectly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.drinkinggame">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activitys.GameActivity"></activity>
+        <activity
+            android:name=".Activitys.PackageManagerActivity"
+            android:label="@string/title_activity_package_manager"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Activitys.GameActivity" />
         <activity android:name=".Activitys.PlayerSelectionActivity" />
         <activity android:name=".Activitys.GameSettingsActivity" />
         <activity android:name=".Activitys.MainActivity">
