--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activitys.PackageEditorActivity"></activity>
+        <activity android:name=".Activitys.NewCardActivity"></activity>
+        <activity android:name=".Activitys.PackageEditorActivity" />
         <activity
             android:name=".Activitys.PackageManagerActivity"
             android:label="@string/title_activity_package_manager"
