--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,27 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon_beer"
+        android:icon="@drawable/app_icon_beer_transparent"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/app_icon_beer"
+        android:roundIcon="@drawable/app_icon_beer_transparent"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activitys.NewCardActivity"></activity>
-        <activity android:name=".Activitys.PackageEditorActivity" />
+        <activity android:name=".Activitys.NewCardActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activitys.PackageEditorActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Activitys.PackageManagerActivity"
             android:label="@string/title_activity_package_manager"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activitys.GameActivity" />
-        <activity android:name=".Activitys.PlayerSelectionActivity" />
-        <activity android:name=".Activitys.GameSettingsActivity" />
-        <activity android:name=".Activitys.MainActivity">
+        <activity android:name=".Activitys.GameActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activitys.PlayerSelectionActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activitys.GameSettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Activitys.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
